The error has been fixed, removed 'onclick' and added deploy link.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div class="button-container">
-      <button class="button-first" id="myButtonFirst" onclick="getUrl()">
-        Натисни
-      </button>
+      <button class="button-first" id="myButtonFirst">Натисни</button>
       <button class="button-second" id="myButtonSecond">Перейти</button>
     </div>
     <script src="script.js"></script>
